tests/NormalTests/paczka1/small_fuzzy/34342816.err
Error in line 1: P3rUDd A641 56,5
Error in line 4: S89 S89 78,2
Error in line 9: 5xn A830 65,19
Error in line 2: P3rUDd S89 46,0
Error in line 10: P3rUDd A641 77,7
